--- a/dev/tensor/index.html
+++ b/dev/tensor/index.html
@@ -1,2 +1,89 @@
 <!DOCTYPE html>
-<html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><title>Tensor · ThArrays</title><link href="https://fonts.googleapis.com/css?family=Lato|Roboto+Mono" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/fontawesome.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/solid.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/brands.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.css" rel="stylesheet" type="text/css"/><script>documenterBaseURL=".."</script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js" data-main="../assets/documenter.js"></script><script src="../siteinfo.js"></script><script src="../../versions.js"></script><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-dark.css" data-theme-name="documenter-dark"/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-light.css" data-theme-name="documenter-light" data-theme-primary/><script src="../assets/themeswap.js"></script></head><body><div id="documenter"><nav class="docs-sidebar"><div class="docs-package-name"><span class="docs-autofit">ThArrays</span></div><form class="docs-search" action="../search/"><input class="docs-search-query" id="documenter-search-query" name="q" type="text" placeholder="Search docs"/></form><ul class="docs-menu"><li><a class="tocitem" href="../">Home</a></li><li class="is-active"><a class="tocitem" href>Tensor</a><ul class="internal"><li><a class="tocitem" href="#Tensor-2"><span>Tensor</span></a></li><li><a class="tocitem" href="#Tensor-on-GPU-1"><span>Tensor on GPU</span></a></li></ul></li><li><a class="tocitem" href="../ad/">AD</a></li><li><a class="tocitem" href="../torchscript/">TorchScript</a></li><li><a class="tocitem" href="../reference/">Reference</a></li></ul><div class="docs-version-selector field has-addons"><div class="control"><span class="docs-label button is-static is-size-7">Version</span></div><div class="docs-selector control is-expanded"><div class="select is-fullwidth is-size-7"><select id="documenter-version-selector"></select></div></div></div></nav><div class="docs-main"><header class="docs-navbar"><nav class="breadcrumb"><ul class="is-hidden-mobile"><li class="is-active"><a href>Tensor</a></li></ul><ul class="is-hidden-tablet"><li class="is-active"><a href>Tensor</a></li></ul></nav><div class="docs-right"><a class="docs-edit-link" href="https://github.com/TuringLang/ThArrays.jl/blob/master/docs/src/tensor.md" title="Edit on GitHub"><span class="docs-icon fab"></span><span class="docs-label is-hidden-touch">Edit on GitHub</span></a><a class="docs-settings-button fas fa-cog" id="documenter-settings-button" href="#" title="Settings"></a><a class="docs-sidebar-button fa fa-bars is-hidden-desktop" id="documenter-sidebar-button" href="#"></a></div></header><article class="content" id="documenter-page"><p>&lt;!– # ( -<em>- mode: markdown; mode: auto-fill -</em>- ) –&gt;</p><h1 id="Tensor-1"><a class="docs-heading-anchor" href="#Tensor-1">Tensor</a><a class="docs-heading-anchor-permalink" href="#Tensor-1" title="Permalink"></a></h1><h2 id="Tensor-2"><a class="docs-heading-anchor" href="#Tensor-2">Tensor</a><a class="docs-heading-anchor-permalink" href="#Tensor-2" title="Permalink"></a></h2><h2 id="Tensor-on-GPU-1"><a class="docs-heading-anchor" href="#Tensor-on-GPU-1">Tensor on GPU</a><a class="docs-heading-anchor-permalink" href="#Tensor-on-GPU-1" title="Permalink"></a></h2></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../ad/">AD »</a></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Tuesday 14 April 2020 21:48">Tuesday 14 April 2020</span>. Using Julia version 1.3.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+<html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/><title>Tensor · ThArrays</title><link href="https://fonts.googleapis.com/css?family=Lato|Roboto+Mono" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/fontawesome.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/solid.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/brands.min.css" rel="stylesheet" type="text/css"/><link href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.11.1/katex.min.css" rel="stylesheet" type="text/css"/><script>documenterBaseURL=".."</script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js" data-main="../assets/documenter.js"></script><script src="../siteinfo.js"></script><script src="../../versions.js"></script><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-dark.css" data-theme-name="documenter-dark"/><link class="docs-theme-link" rel="stylesheet" type="text/css" href="../assets/themes/documenter-light.css" data-theme-name="documenter-light" data-theme-primary/><script src="../assets/themeswap.js"></script></head><body><div id="documenter"><nav class="docs-sidebar"><div class="docs-package-name"><span class="docs-autofit">ThArrays</span></div><form class="docs-search" action="../search/"><input class="docs-search-query" id="documenter-search-query" name="q" type="text" placeholder="Search docs"/></form><ul class="docs-menu"><li><a class="tocitem" href="../">Home</a></li><li class="is-active"><a class="tocitem" href>Tensor</a><ul class="internal"><li><a class="tocitem" href="#Tensor-2"><span>Tensor</span></a></li><li><a class="tocitem" href="#Tensor-on-GPU-1"><span>Tensor on GPU</span></a></li></ul></li><li><a class="tocitem" href="../ad/">AD</a></li><li><a class="tocitem" href="../torchscript/">TorchScript</a></li><li><a class="tocitem" href="../reference/">Reference</a></li></ul><div class="docs-version-selector field has-addons"><div class="control"><span class="docs-label button is-static is-size-7">Version</span></div><div class="docs-selector control is-expanded"><div class="select is-fullwidth is-size-7"><select id="documenter-version-selector"></select></div></div></div></nav><div class="docs-main"><header class="docs-navbar"><nav class="breadcrumb"><ul class="is-hidden-mobile"><li class="is-active"><a href>Tensor</a></li></ul><ul class="is-hidden-tablet"><li class="is-active"><a href>Tensor</a></li></ul></nav><div class="docs-right"><a class="docs-edit-link" href="https://github.com/TuringLang/ThArrays.jl/blob/master/docs/src/tensor.md" title="Edit on GitHub"><span class="docs-icon fab"></span><span class="docs-label is-hidden-touch">Edit on GitHub</span></a><a class="docs-settings-button fas fa-cog" id="documenter-settings-button" href="#" title="Settings"></a><a class="docs-sidebar-button fa fa-bars is-hidden-desktop" id="documenter-sidebar-button" href="#"></a></div></header><article class="content" id="documenter-page"><h1 id="Tensor-1"><a class="docs-heading-anchor" href="#Tensor-1">Tensor</a><a class="docs-heading-anchor-permalink" href="#Tensor-1" title="Permalink"></a></h1><h2 id="Tensor-2"><a class="docs-heading-anchor" href="#Tensor-2">Tensor</a><a class="docs-heading-anchor-permalink" href="#Tensor-2" title="Permalink"></a></h2><p><code>ThArrays.Tensor</code> is an array-like data structure, we can create a Tensor instance from a Julia array directly:</p><pre><code class="language-julia">julia&gt; a1 = rand(3,2)
+3×2 Array{Float64,2}:
+ 0.980161  0.612138
+ 0.66993   0.564298
+ 0.956528  0.620299
+
+julia&gt; t1 = Tensor(a1)
+PyTorch.Tensor{Float64, 2}:
+ 0.9802  0.6121
+ 0.6699  0.5643
+ 0.9565  0.6203
+[ CPUDoubleType{3,2} ]
+</code></pre><p>In this way, the Tensor and the Julia Array share the underlying data, if you change the elements of one of them, the other one also sees the change:</p><pre><code class="language-julia">julia&gt; a1[1] = 1
+1
+
+julia&gt; t1[2] = 2
+2
+
+julia&gt; a1
+3×2 Array{Float64,2}:
+ 1.0       0.612138
+ 2.0       0.564298
+ 0.956528  0.620299
+
+julia&gt; t1
+PyTorch.Tensor{Float64, 2}:
+ 1.0000  0.6121
+ 2.0000  0.5643
+ 0.9565  0.6203
+[ CPUDoubleType{3,2} ]
+</code></pre><p>If you don&#39;t want them to share the underlying data, just pass <code>detach=true</code> when constructing Tensors:</p><pre><code class="language-julia">julia&gt; a2 = rand(3, 2)
+3×2 Array{Float64,2}:
+ 0.98454   0.906715
+ 0.945537  0.414818
+ 0.211776  0.228856
+
+julia&gt; t2 = Tensor(a2, detach=true)
+PyTorch.Tensor{Float64, 2}:
+ 0.9845  0.9067
+ 0.9455  0.4148
+ 0.2118  0.2289
+[ CPUDoubleType{3,2} ]
+
+julia&gt; a2[1] = 1
+1
+
+julia&gt; t2[2] = 2
+2
+
+julia&gt; a2
+3×2 Array{Float64,2}:
+ 1.0       0.906715
+ 0.945537  0.414818
+ 0.211776  0.228856
+
+julia&gt; t2
+PyTorch.Tensor{Float64, 2}:
+ 0.9845  0.9067
+ 2.0000  0.4148
+ 0.2118  0.2289
+[ CPUDoubleType{3,2} ]
+</code></pre><p>Calling <code>Convert(::Type{Array}, t::Tensor)</code> will convert a Tensor to a Julia array.</p><p><code>ThArrays.Tensor</code> also supports many other operation like Julia arrays do, including iteration, indexing, assignment via indexing, concatenating (<code>cat</code>, <code>hcat</code>, <code>vcat</code>), etc.</p><h3 id="The-0-dim-Tensor-1"><a class="docs-heading-anchor" href="#The-0-dim-Tensor-1">The 0-dim Tensor</a><a class="docs-heading-anchor-permalink" href="#The-0-dim-Tensor-1" title="Permalink"></a></h3><p>It&#39;s worth noting that, the elements of a <code>Tensor{T,N}</code> are not of type <code>T</code>, they are of type <code>Tensor{T,0}</code> which is a 0-dim tensor. The value of a 0-dim Tensor can be fetch by <code>convert(::Type{T}, t::Tensor{T, 0})</code> or more simply, <code>t[]</code>.</p><h2 id="Tensor-on-GPU-1"><a class="docs-heading-anchor" href="#Tensor-on-GPU-1">Tensor on GPU</a><a class="docs-heading-anchor-permalink" href="#Tensor-on-GPU-1" title="Permalink"></a></h2><p>If you installed ThArrays with CUDA support, you can move your Tensors onto GPU by calling <code>to</code>:</p><pre><code class="language-julia">julia&gt; t1 = Tensor(rand(3, 2))
+PyTorch.Tensor{Float64, 2}:
+ 0.6791  0.1224
+ 0.0466  0.8784
+ 0.7620  0.1394
+[ CPUDoubleType{3,2} ]
+
+julia&gt; on(t1)
+CPU()
+
+julia&gt; t2 = to(t1, CUDA(2))
+PyTorch.Tensor{Float64, 2}:
+ 0.6791  0.1224
+ 0.0466  0.8784
+ 0.7620  0.1394
+[ CUDADoubleType{3,2} ]
+
+julia&gt; on(t2)
+CUDA(2)
+
+julia&gt; t2 * 2
+PyTorch.Tensor{Float64, 2}:
+ 1.3582  0.2449
+ 0.0931  1.7569
+ 1.5240  0.2789
+[ CUDADoubleType{3,2} ]
+</code></pre><p>As you see, <code>on</code> can be used to determine which device a Thensor is on.</p><p>&lt;!– Local Variables: –&gt; &lt;!– mode: markdown –&gt; &lt;!– mode: auto-fill –&gt; &lt;!– End: –&gt;</p></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../ad/">AD »</a></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Tuesday 14 April 2020 22:20">Tuesday 14 April 2020</span>. Using Julia version 1.3.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
